--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 os: "Windows 11",
                 icon: "https://img.icons8.com/color/144/windows-11.png",
                 editions: [
-                    { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?w=400", dl: "#" },
+                    { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?", dl: "#" },
                     { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "#" },
                     { id: 113, name: "Windows 11 Enterprise", price: 3499, img: "images/windows11enterprise.png?w=400", dl: "#" }
                 ]
