--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                 icon: "https://img.icons8.com/color/144/windows-11.png",
                 editions: [
                     { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?", dl: "#" },
-                    { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "#" },
-                    { id: 113, name: "Windows 11 Enterprise", price: 3499, img: "images/windows11enterprise.png?w=400", dl: "#" }
+                    { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "#" }
                 ]
             },
             {
@@ -182,8 +181,8 @@
                 os: "Windows 7",
                 icon: "https://img.icons8.com/color/144/windows-7.png",
                 editions: [
-                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "https://images.unsplash.com/photo-1517430816045-df4b7de11d1d?w=400", dl: "#" },
-                    { id: 72, name: "Windows 7 Professional", price: 699, img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400", dl: "#" }
+                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "windows7ultimate.png?w=400", dl: "#" },
+                    { id: 72, name: "Windows 7 Professional", price: 699, img: "windows7pro?w=400", dl: "#" }
                 ]
             }
         ];
