--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                 os: "Windows 7",
                 icon: "https://img.icons8.com/color/144/windows-7.png",
                 editions: [
-                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "windows7ultimate.png?w=400", dl: "#" },
-                    { id: 72, name: "Windows 7 Professional", price: 699, img: "windows7pro.png?w=400", dl: "#" }
+                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "images/windows7ultimate.png?w=400", dl: "#" },
+                    { id: 72, name: "Windows 7 Professional", price: 699, img: "images/windows7pro.png?w=400", dl: "#" }
                 ]
             }
         ];
