--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         const officeProducts = [
             { id: 4, name: 'Office 2024 Pro Plus', price: 4599, img: 'https://img.icons8.com/color/144/microsoft-office-2019.png', dl: '#' },
             { id: 5, name: 'Office 2021 Pro Plus', price: 3299, img: 'https://img.icons8.com/color/144/microsoft-office-2019.png', dl: '#' },
-            { id: 8, name: 'Microsoft 365 Personal', price: 4899, img: 'https://img.icons8.com/color/144/office-365.png', dl: '#' }
+            { id: 8, name: 'Microsoft 365 Personal', price: 4899, img: 'https://upload.wikimedia.org/wikipedia/commons/0/0e/Microsoft_365_(2022).svg', dl: '#' }
         ];
 
         let cart = [];
