--- a/index.html
+++ b/index.html
@@ -165,24 +165,24 @@
                 os: "Windows 11",
                 icon: "https://img.icons8.com/color/144/windows-11.png",
                 editions: [
-                    { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?", dl: "#" },
-                    { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "#" }
+                    { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?", dl: "https://www.microsoft.com/en-in/software-download/windows11ISO" },
+                    { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows11ISO" }
                 ]
             },
             {
                 os: "Windows 10",
                 icon: "https://img.icons8.com/color/144/windows-10--v1.png",
                 editions: [
-                    { id: 101, name: "Windows 10 Pro", price: 1499, img: "images/windows10pro.png?w=400", dl: "#" },
-                    { id: 102, name: "Windows 10 Home", price: 1199, img: "images/windows10home.png?w=400", dl: "#" }
+                    { id: 101, name: "Windows 10 Pro", price: 1499, img: "images/windows10pro.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows10ISO" },
+                    { id: 102, name: "Windows 10 Home", price: 1199, img: "images/windows10home.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows10ISO" }
                 ]
             },
             {
                 os: "Windows 7",
                 icon: "https://img.icons8.com/color/144/windows-7.png",
                 editions: [
-                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "images/windows7ultimate.png?w=400", dl: "#" },
-                    { id: 72, name: "Windows 7 Professional", price: 699, img: "images/windows7pro.png?w=400", dl: "#" }
+                    { id: 71, name: "Windows 7 Ultimate", price: 899, img: "images/windows7ultimate.png?w=400", dl: "https://archive.org/download/Microsoft-Windows-7-August-2018/7601.24214.180801-1700.win7sp1_ldr_escrow_CLIENT_ULTIMATE_x64FRE_en-us.iso" },
+                    { id: 72, name: "Windows 7 Professional", price: 699, img: "images/windows7pro.png?w=400", dl: "https://archive.org/download/Microsoft-Windows-7-August-2018/7601.24214.180801-1700.win7sp1_ldr_escrow_CLIENT_PROFESSIONAL_x64FRE_en-us.iso" }
                 ]
             }
         ];
