--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login | KeyVault India</title>
+
 <style>
 body {
     font-family: 'Segoe UI', sans-serif;
@@ -48,25 +49,46 @@ button {
 
 <div class="login-box">
     <h2>Login</h2>
-    <input type="text" id="name" placeholder="Your Name">
+
+    <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
+
     <button onclick="login()">Login</button>
 </div>
 
 <script>
-function login() {
-    const name = document.getElementById("name").value.trim();
+async function login() {
+
+    const username = document.getElementById("username").value.trim();
     const password = document.getElementById("password").value.trim();
 
-    if (!name || !password) {
+    if (!username || !password) {
         alert("Fill all fields");
         return;
     }
 
-    // Temporary login logic (replace with backend later)
-    localStorage.setItem("kv_user", JSON.stringify({ name }));
+    try {
+        const response = await fetch("login.json");
+        const data = await response.json();
 
-    window.location.href = "index.html";
+        const user = data.users.find(u =>
+            u.username === username &&
+            u.password === password
+        );
+
+        if (!user) {
+            alert("Invalid username or password");
+            return;
+        }
+
+        // Store only username in localStorage
+        localStorage.setItem("kv_username", username);
+
+        window.location.href = "index.html";
+
+    } catch (error) {
+        alert("Cannot load login.json. Use local server.");
+    }
 }
 </script>
 
