--- a/index.html
+++ b/index.html
@@ -269,36 +269,152 @@ checkLogin();
                 });
                 html += `</div></div>`;
                 winContainer.innerHTML += html;
-            });
+const windowsData = [
+    {
+        os: "Windows 11",
+        icon: "https://img.icons8.com/color/144/windows-11.png",
+        editions: [
+            { id: 111, name: "Windows 11 Pro", price: 1899, img: "images/windows11pro.png?", dl: "https://www.microsoft.com/en-in/software-download/windows11" },
+            { id: 112, name: "Windows 11 Home", price: 1499, img: "images/windows11home.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows11" }
+        ]
+    },
+    {
+        os: "Windows 10",
+        icon: "https://img.icons8.com/color/144/windows-10--v1.png",
+        editions: [
+            { id: 101, name: "Windows 10 Pro", price: 1499, img: "images/windows10pro.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows10ISO" },
+            { id: 102, name: "Windows 10 Home", price: 1199, img: "images/windows10home.png?w=400", dl: "https://www.microsoft.com/en-in/software-download/windows10ISO" }
+        ]
+    },
+    {
+        os: "Windows 7",
+        icon: "https://img.icons8.com/color/144/windows-7.png",
+        editions: [
+            { id: 71, name: "Windows 7 Ultimate", price: 899, img: "images/windows7ultimate.png?w=400", dl: "https://archive.org/download/Microsoft-Windows-7-August-2018/7601.24214.180801-1700.win7sp1_ldr_escrow_CLIENT_ULTIMATE_x64FRE_en-us.iso" },
+            { id: 72, name: "Windows 7 Professional", price: 699, img: "images/windows7pro.png?w=400", dl: "https://archive.org/download/Microsoft-Windows-7-August-2018/7601.24214.180801-1700.win7sp1_ldr_escrow_CLIENT_PROFESSIONAL_x64FRE_en-us.iso" }
+        ]
+    }
+];
 
-            // Render Office Grid
-            const offGrid = document.getElementById('off-grid');
-            officeProducts.forEach(p => {
-                offGrid.innerHTML += `
-                    <div class="product-card">
-                        <div style="padding:20px; text-align:center;"><img src="${p.img}" style="width:80px"></div>
-                        <div class="card-body">
-                            <h3>${p.name}</h3>
-                            <p class="price">₹${p.price.toLocaleString('en-IN')}</p>
-                            <div class="actions">
-                                <button class="btn btn-buy" onclick="addToCart(${p.id}, '${p.name}', ${p.price})">Buy Now</button>
-                                <a href="${p.dl}" class="btn btn-dl">Setup</a>
-                            </div>
+const officeProducts = [
+    { id: 4, name: 'Office 2024 Pro Plus', price: 4599, img: 'https://img.icons8.com/color/144/microsoft-office-2019.png', dl: 'https://c2rsetup.officeapps.live.com/c2r/download.aspx?ProductreleaseID=ProPlus2024Retail&platform=x64&language=en-us&version=O16GA' },
+    { id: 5, name: 'Office 2021 Pro Plus', price: 3299, img: 'https://img.icons8.com/color/144/microsoft-office-2019.png', dl: 'https://c2rsetup.officeapps.live.com/c2r/download.aspx?ProductreleaseID=ProPlus2021Retail&platform=x64&language=en-us&version=O16GA' },
+    { id: 8, name: 'Microsoft 365 Pro Plus', price: 4899, img: 'https://upload.wikimedia.org/wikipedia/commons/0/0e/Microsoft_365_(2022).svg', dl: 'https://c2rsetup.officeapps.live.com/c2r/download.aspx?ProductreleaseID=O365ProPlusRetail&platform=x64&language=en-us&version=O16GA' }
+];
+
+let cart = [];
+let purchasedProducts = [];
+
+/* Load purchased IDs from login.json */
+async function loadPurchasedProducts() {
+    const username = localStorage.getItem("kv_username");
+    if (!username) return;
+
+    try {
+        const response = await fetch("login.json");
+        const data = await response.json();
+
+        const user = data.users.find(u => u.username === username);
+        if (user) {
+            purchasedProducts = user.purchased || [];
+        }
+    } catch (error) {
+        console.log("Unable to load login.json");
+    }
+}
+
+function openTab(evt, tabName) {
+    let content = document.getElementsByClassName("content-section");
+    for (let i = 0; i < content.length; i++) content[i].classList.remove("active");
+
+    let buttons = document.getElementsByClassName("tab-btn");
+    for (let i = 0; i < buttons.length; i++) buttons[i].classList.remove("active");
+
+    document.getElementById(tabName).classList.add("active");
+    evt.currentTarget.classList.add("active");
+}
+
+async function init() {
+
+    await loadPurchasedProducts();
+
+    const winContainer = document.getElementById('windows-content');
+    windowsData.forEach(group => {
+
+        let html = `
+            <div class="os-group">
+                <div class="os-header">
+                    <img src="${group.icon}" alt="${group.os}">
+                    <h2>${group.os}</h2>
+                </div>
+                <div class="slider-container">
+        `;
+
+        group.editions.forEach(ed => {
+
+            const buttonHTML = purchasedProducts.includes(ed.id)
+                ? `<button class="btn btn-buy" onclick="viewKey(${ed.id})">View Product Key</button>`
+                : `<button class="btn btn-buy" onclick="addToCart(${ed.id}, '${ed.name}', ${ed.price})">Buy License</button>`;
+
+            html += `
+                <div class="product-card">
+                    <img src="${ed.img}" class="edition-img">
+                    <div class="card-body">
+                        <h3>${ed.name}</h3>
+                        <p class="price">₹${ed.price.toLocaleString('en-IN')}</p>
+                        <div class="actions">
+                            ${buttonHTML}
+                            <a href="${ed.dl}" class="btn btn-dl">ISO File</a>
                         </div>
                     </div>
-                `;
-            });
-        }
+                </div>
+            `;
+        });
 
-        function addToCart(id, name, price) {
-            cart.push({id, name, price});
-            const total = cart.reduce((s, i) => s + i.price, 0);
-            document.getElementById('count').innerText = cart.length;
-            document.getElementById('total').innerText = '₹' + total.toLocaleString('en-IN');
-            document.getElementById('cart-bar').classList.add('active');
-        }
+        html += `</div></div>`;
+        winContainer.innerHTML += html;
+    });
 
-        init();
+    const offGrid = document.getElementById('off-grid');
+
+    officeProducts.forEach(p => {
+
+        const buttonHTML = purchasedProducts.includes(p.id)
+            ? `<button class="btn btn-buy" onclick="viewKey(${p.id})">View Product Key</button>`
+            : `<button class="btn btn-buy" onclick="addToCart(${p.id}, '${p.name}', ${p.price})">Buy Now</button>`;
+
+        offGrid.innerHTML += `
+            <div class="product-card">
+                <div style="padding:20px; text-align:center;">
+                    <img src="${p.img}" style="width:80px">
+                </div>
+                <div class="card-body">
+                    <h3>${p.name}</h3>
+                    <p class="price">₹${p.price.toLocaleString('en-IN')}</p>
+                    <div class="actions">
+                        ${buttonHTML}
+                        <a href="${p.dl}" class="btn btn-dl">Setup</a>
+                    </div>
+                </div>
+            </div>
+        `;
+    });
+}
+
+function addToCart(id, name, price) {
+    cart.push({id, name, price});
+    const total = cart.reduce((s, i) => s + i.price, 0);
+    document.getElementById('count').innerText = cart.length;
+    document.getElementById('total').innerText = '₹' + total.toLocaleString('en-IN');
+    document.getElementById('cart-bar').classList.add('active');
+}
+
+function viewKey(productId) {
+    alert("Your Product Key for Product ID " + productId + " is: XXXXX-XXXXX-XXXXX");
+}
+
+init();
+
     </script>
 </body>
 </html>
