--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ z-index:2000;
             margin-top:8px;
             color:green;
             display:none;
-        ">Copied ✓</div>
+        ">Copied to clipboard</div>
 
         <button onclick="closeModal()" class="btn btn-buy"
             style="margin-top:15px;width:100%;">
